--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="client.js"></script>
@@ -16,10 +17,11 @@
           <p class="logo">
             FoodBase
           </p>
-
-          <button class="signin">
-            Sign In
-          </button>
+          <a href="/dashboard"
+            ><button class="signin" id="signin">
+              Sign In
+            </button>
+          </a>
         </nav>
       </header>
       <!--image layout-->
