--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="client.js"></script>
     <title>FoodBase</title>
   </head>
@@ -19,7 +20,7 @@
           </p>
           <a href="/dashboard"
             ><button class="signin" id="signin">
-              Sign In
+              Dashboard
             </button>
           </a>
         </nav>
