completed dashboard layout, need to implement delete/edit/add

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
       <div class="head2">
         <form action="" id="searchf">
           <input type="text" placeholder="Enter recipe name..." name="search" />
-          <button class="search">
+          <button class="signin search">
             <i class="material-icons">search</i>
           </button>
         </form>
