added recipe form page

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,9 +28,7 @@
             placeholder="Enter recipe name..."
             id="searchdb"
           />
-          <button class="signin search">
-            <i class="material-icons">search</i>
-          </button>
+          <i class="material-icons" id="search-icon">search</i>
         </form>
       </div>
       <div class="head3">
