--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="client.js"></script>
+    <script
+      src="https://widget.cloudinary.com/v2.0/global/all.js"
+      type="text/javascript"
+    ></script>
     <title>FoodBase</title>
   </head>
   <body>
