--- a/dashboard.html
+++ b/dashboard.html
@@ -51,6 +51,14 @@
         <p id="storedrec"></p>
       </div>
       <ul id="recipelist"></ul>
+      <!-- The Modal -->
+      <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Some text in the Modal..</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
