--- a/dashboard.html
+++ b/dashboard.html
@@ -51,12 +51,23 @@
         <p id="storedrec"></p>
       </div>
       <ul id="recipelist"></ul>
-      <!-- The Modal -->
       <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-          <span class="close">&times;</span>
-          <p>Some text in the Modal..</p>
+          <div class="title">
+            <p class="modal-title"></p>
+          </div>
+          <div>
+            <img class="modal-image" src="" />
+          </div>
+          <div>
+            <p id="ing-title">Ingredients:</p>
+            <ul class="modal-ingredients"></ul>
+          </div>
+          <div>
+            <p id="inst-title">Directions:</p>
+            <p class="modal-instructions"></p>
+          </div>
         </div>
       </div>
     </main>
