fixed bugs in recipe form and added edit option for recipes

--- a/recipeform.html
+++ b/recipeform.html
@@ -47,7 +47,7 @@
 
           <label ><b>Choose Image: </b></label>
           <button href="#" id="upload_widget" class='signin'>Upload image</button>
-          <input name='image' type="hidden" value= required id='image-url'>
+          <input name='image' type="hidden" value='' id='image-url' required>
           <div class="feature_thumb"/></div>          
         
           <label ><b>Ingredients: </b></label> 
