finished edit recipe modal

--- a/dashboard.html
+++ b/dashboard.html
@@ -75,7 +75,7 @@
       <div id="editModal" class="modal">
         <!-- Modal content -->
         <div class="modal-editing">
-          <form action="" id='editform'>
+          <form action="" id='editform' class='main-form'>
             <label><b>Recipe Name: </b></label>
             <input name='recipename' type="text" placeholder="Enter Recipe Name" id='rec-name' required>
   
