--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <p class="logo">
             FoodBase
           </p>
+          <a href="/browse">
+            <button class="signin browse" id="browse">
+              Browse
+            </button>
+          </a>
           <a href="/dashboard"
             ><button class="signin" id="signin">
               Dashboard
