removed unused assets and added lazy loading of images

--- a/browse.html
+++ b/browse.html
@@ -11,6 +11,7 @@
     />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="client.js"></script>
+    <script src="assets/lazysizes.min.js"></script>
     <title>Browse Recipes</title>
   </head>
   <body>
