--- a/browse.html
+++ b/browse.html
@@ -11,7 +11,8 @@
     />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="client.js"></script>
-    <script src="assets/lazysizes.min.js"></script>
+    <script src="http://afarkas.github.io/lazysizes/lazysizes.min.js"></script>
+
     <title>Browse Recipes</title>
   </head>
   <body>
