added different color to numbers for recipe instructions

--- a/browse.html
+++ b/browse.html
@@ -62,7 +62,7 @@
           </div>
           <div>
             <p id="inst-title">Directions:</p>
-            <p class="modal-instructions"></p>
+            <p class="modal-instructions" id="m-inst"></p>
           </div>
         </div>
       </div>
